--- a/Methods.ipynb
+++ b/Methods.ipynb
@@ -258,11 +258,160 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Stemming"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from nltk.stem.porter import PorterStemmer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stemmer = PorterStemmer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stem_words(text):\n",
+    "    words = text.split()\n",
+    "    stems = [stemmer.stem(word) for word in words]\n",
+    "    return stems"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['text',\n",
+       " 'preprocess',\n",
+       " 'techniqu',\n",
+       " 'for',\n",
+       " 'natur',\n",
+       " 'languag',\n",
+       " 'process',\n",
+       " 'one',\n",
+       " 'of',\n",
+       " 'the',\n",
+       " 'exampl',\n",
+       " 'for',\n",
+       " 'remov',\n",
+       " 'of',\n",
+       " 'suffix',\n",
+       " 'give',\n",
+       " 'root',\n",
+       " 'of',\n",
+       " 'the',\n",
+       " 'word']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text = 'text preprocessing techniques for natural language processing one of the examples for removing of suffixes giving roots of the words'\n",
+    "stem_words(text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lemmatization "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package wordnet to\n",
+      "[nltk_data]     C:\\Users\\admin\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# from nltk.stem import WordNetLemmatizer\n",
+    "import nltk\n",
+    "nltk.download('wordnet')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lemmatizor = WordNetLemmatizer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lemma_word(text):\n",
+    "    words = text.split()\n",
+    "    return [lemmatizor.lemmatize(word, pos='v') for word in words]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['eat', 'write', 'eat', 'bring', 'buy', 'run', 'swing', 'work']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text = \"ate wrote eat brought bought ran swung worked\"\n",
+    "lemma_word(text)"
+   ]
   }
  ],
  "metadata": {
